// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Claude Code plugin renderer archive matches the snapshot (templates and wiring; the primer is pinned by its own golden): oauth 1`] = `
{
  ".claude-plugin/plugin.json": "{
  "name": "lazyit",
  "displayName": "lazyit (lazyit.example.com)",
  "description": "Connects Claude Code to this lazyit instance over MCP and teaches it lazyit's domain: assets, assignments, application access, consumables and the knowledge base.",
  "homepage": "https://lazyit.example.com",
  "author": {
    "name": "lazyit (lazyit.example.com)"
  }
}
",
  ".mcp.json": "{
  "mcpServers": {
    "lazyit": {
      "type": "http",
      "url": "https://lazyit.example.com/mcp"
    }
  }
}
",
  "skills/lazyit/SKILL.md": "---
name: lazyit
description: "Work with this organization's lazyit instance, the IT team's system of record: the asset inventory (laptops, servers, network gear, licenses) and who holds each asset, application access grants and access requests, consumable stock, the knowledge base, locations and the infrastructure map. Uses the lazyit MCP tools."
when_to_use: "When the user asks about an IT asset, device, serial number or asset tag; who has which asset; onboarding or offboarding a person; granting, revoking or requesting access to an application; toner, cables or other consumable stock; an IT procedure or knowledge-base article; a location, room or rack; or a host, virtual machine or container in the infrastructure map."
---

# lazyit

lazyit is the IT team's system of record for this organization, served at https://lazyit.example.com. Every read and change goes through the \`lazyit\` MCP server bundled with this plugin; there is no other way in, and nothing here replaces its tools.

## First, read the domain
Before the first lazyit action in a conversation, read [reference/domain.md](reference/domain.md). It explains the asset-centric model (ownership is an assignment, never a field), soft deletion, access grants and requests, consumable movements and knowledge-base visibility, and the rules for working with lazyit on this channel. Follow it.

[reference/tools.md](reference/tools.md) lists the lazyit tools this build ships, with their class and the permission each needs. The tools you can actually call are the ones the MCP server lists for this connection.

## Workflow
1. Resolve before acting: search for every record the request names (an asset tag or serial, a person's email, an application's exact name, an article slug) and read it. Never invent ids or values.
2. Before a change, say exactly what will change and on which records. Make destructive, privilege, identity or access changes one at a time.
3. After the tools answer, report what actually changed, with identifiers the person recognizes. A forbidden or not-found answer is final.
4. Lists are paginated: narrow the query or page through the results instead of guessing.

## Connection
- The bundled \`lazyit\` MCP server signs in with OAuth. The first time a lazyit tool is needed, Claude Code opens the browser to sign in to lazyit and approve the access; \`/mcp\` shows the connection and re-authenticates it.
- The access is the person's own lazyit permissions, limited to what they approved (read only, or read and write).
- Never ask for, accept or repeat a token, password or other secret in the conversation.
",
  "skills/lazyit/reference/tools.md": "# lazyit tools

Generated from this instance's live tool registry. The MCP server lists only the tools the connected person may use with the access they granted; a tool below that it does not list is outside their permissions or the granted access.

Classes: \`read\` never changes data; \`write\` changes data and your client asks for confirmation; \`elevated\` changes privileges, identity, credentials or access and needs the broadest granted access.

| Tool | Class | Permission | What it does |
| --- | --- | --- | --- |
| \`grant_access\` | elevated | \`accessGrant:grant\` | Grant access: Grant a person access \\| at a level. |
| \`my_profile\` | read | any signed-in person | My profile: The caller. |
| \`search_assets\` | read | \`asset:read\` | Search assets: Search the asset inventory by tag, serial or name. |
",
}
`;

exports[`Claude Code plugin renderer archive matches the snapshot (templates and wiring; the primer is pinned by its own golden): personal-token 1`] = `
{
  ".claude-plugin/plugin.json": "{
  "name": "lazyit",
  "displayName": "lazyit (192.168.1.20:8080)",
  "description": "Connects Claude Code to this lazyit instance over MCP and teaches it lazyit's domain: assets, assignments, application access, consumables and the knowledge base.",
  "homepage": "http://192.168.1.20:8080",
  "author": {
    "name": "lazyit (192.168.1.20:8080)"
  },
  "userConfig": {
    "token": {
      "type": "string",
      "title": "lazyit personal MCP token",
      "description": "A personal MCP token (lzit_pat_…) from lazyit: Account, AI connections. It expires; create a new one when it does.",
      "sensitive": true,
      "required": true
    }
  }
}
",
  ".mcp.json": "{
  "mcpServers": {
    "lazyit": {
      "type": "http",
      "url": "http://192.168.1.20:8080/mcp",
      "headers": {
        "Authorization": "Bearer \${user_config.token}"
      }
    }
  }
}
",
  "skills/lazyit/SKILL.md": "---
name: lazyit
description: "Work with this organization's lazyit instance, the IT team's system of record: the asset inventory (laptops, servers, network gear, licenses) and who holds each asset, application access grants and access requests, consumable stock, the knowledge base, locations and the infrastructure map. Uses the lazyit MCP tools."
when_to_use: "When the user asks about an IT asset, device, serial number or asset tag; who has which asset; onboarding or offboarding a person; granting, revoking or requesting access to an application; toner, cables or other consumable stock; an IT procedure or knowledge-base article; a location, room or rack; or a host, virtual machine or container in the infrastructure map."
---

# lazyit

lazyit is the IT team's system of record for this organization, served at http://192.168.1.20:8080. Every read and change goes through the \`lazyit\` MCP server bundled with this plugin; there is no other way in, and nothing here replaces its tools.

## First, read the domain
Before the first lazyit action in a conversation, read [reference/domain.md](reference/domain.md). It explains the asset-centric model (ownership is an assignment, never a field), soft deletion, access grants and requests, consumable movements and knowledge-base visibility, and the rules for working with lazyit on this channel. Follow it.

[reference/tools.md](reference/tools.md) lists the lazyit tools this build ships, with their class and the permission each needs. The tools you can actually call are the ones the MCP server lists for this connection.

## Workflow
1. Resolve before acting: search for every record the request names (an asset tag or serial, a person's email, an application's exact name, an article slug) and read it. Never invent ids or values.
2. Before a change, say exactly what will change and on which records. Make destructive, privilege, identity or access changes one at a time.
3. After the tools answer, report what actually changed, with identifiers the person recognizes. A forbidden or not-found answer is final.
4. Lists are paginated: narrow the query or page through the results instead of guessing.

## Connection
- The bundled \`lazyit\` MCP server authenticates with the personal MCP token entered when the plugin was enabled. Tokens are created in lazyit under Account, AI connections, and they expire. When lazyit tools answer 401, the token expired or was revoked: ask the person to create a new one and enter it in the plugin's configuration.
- The access is the person's own lazyit permissions.
- Never ask for, accept or repeat a token, password or other secret in the conversation.
",
  "skills/lazyit/reference/tools.md": "# lazyit tools

Generated from this instance's live tool registry. The MCP server lists only the tools the connected person may use with the access they granted; a tool below that it does not list is outside their permissions or the granted access.

Classes: \`read\` never changes data; \`write\` changes data and your client asks for confirmation; \`elevated\` changes privileges, identity, credentials or access and needs the broadest granted access.

| Tool | Class | Permission | What it does |
| --- | --- | --- | --- |
| \`grant_access\` | elevated | \`accessGrant:grant\` | Grant access: Grant a person access \\| at a level. |
| \`my_profile\` | read | any signed-in person | My profile: The caller. |
| \`search_assets\` | read | \`asset:read\` | Search assets: Search the asset inventory by tag, serial or name. |
",
}
`;
